force-app/main/default/objects/Contact_Tracking__c/Contact_Tracking__c.object-meta.xml
<CustomObject>
    <label>Contact Tracking</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Contact Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>