force-app/main/default/objects/Contact_Tracking__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <label>Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>