force-app/main/default/objects/Contact_Tracking__c/fields/Field_Change__c.field-meta.xml
<CustomField>
    <fullName>Field_Change__c</fullName>
    <formula>Old_Value__c &amp; &quot; to &quot; &amp;  New_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Change</label>
    <type>Text</type>
</CustomField>