force-app/main/default/objects/Contact_Tracking__c/fields/New_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>