force-app/main/default/objects/Contact_Tracking__c/fields/Old_Value_Score__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_Score__c</fullName>
    <formula>IF ( Old_Value__c = &quot;Blue&quot; , 1 , IF ( Old_Value__c = &quot;Silver&quot; , 2 , IF ( Old_Value__c = &quot;Gold&quot; , 3  , IF ( Old_Value__c = &quot;Platinum&quot; , 4 , IF ( Old_Value__c = &quot;Inactive&quot; , 1 , IF ( Old_Value__c = &quot;New&quot; , 2 , IF ( Old_Value__c = &quot;Returned&quot; , 2 , IF ( Old_Value__c = &quot;Current&quot; , 2 , IF ( Old_Value__c = &quot;Active&quot; , 3 , 0)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Value Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>