force-app/main/default/objects/Contact_Tracking__c/fields/Previous_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>