force-app/main/default/objects/Contact_Tracking__c/fields/Score_Change__c.field-meta.xml
<CustomField>
    <fullName>Score_Change__c</fullName>
    <formula>New_Value_Score__c  -  Old_Value_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>